php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41511 Compile failure under IRIX 6.5.30 building md5.c
Submitted: 2007-05-27 09:32 UTC Modified: 2007-05-27 14:50 UTC
From: neko at nekochan dot net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.2.3RC1 OS: IRIX 6.5.30
Private report: No CVE-ID: None
 [2007-05-27 09:32 UTC] neko at nekochan dot net
Description:
------------
Able to compile up to and including php-5.2.2 without error 
(and run in a production environment. My attempt to build 
php-5.2.3RC1 dies in md5.c (An expression appears after a "return" in a 
"void" function).

Reproduce code:
---------------
IRIX64 Mai 6.5 6.5.30f 07202013 IP35
MIPSpro Compilers: Version 7.4.4m

Reproduce code:
---------------
'./configure'
'--prefix=/usr/nekoware/php5'
'--enable-dba'
'--enable-dbx'
'--enable-calendar'
'--enable-wddx'
'--with-config-file-path=/usr/nekoware/etc/php5'
'--with-apxs2=/usr/nekoware/apache2/bin/apxs'
'--enable-cli'
'--with-libxml-dir=/usr/nekoware'
'--with-expat-dir=/usr/nekoware'
'--with-png-dir=/usr/nekoware'
'--with-jpeg-dir=/usr/nekoware'
'--with-freetype-dir=/usr/nekoware'
'--with-zlib-dir=/usr/nekoware'
'--with-zlib'
'--with-curlwrappers'
'--with-curl=shared,/usr/nekoware'
'--with-openssl=shared,/usr/nekoware'
'--with-mysql=shared,/usr/nekoware/mysql5'
'--with-mysqli=shared,/usr/nekoware/mysql5/bin/mysql_config'
'--with-mhash=shared,/usr/nekoware'
'--with-mcrypt=shared,/usr/nekoware'
'--with-bz2=shared,/usr/nekoware'
'--enable-ftp=shared'
'--enable-sockets=shared'
'--with-gd=shared'
'--enable-sqlite-utf8'
'--with-sqlite=shared'
'--enable-exif=shared'
'--enable-dbase=shared'
'--with-xmlrpc'
'--with-gettext=shared,/usr/nekoware'
'--with-iconv-dir=/usr/nekoware'

Expected result:
----------------
Completed build.

Actual result:
--------------
/bin/sh /opt/build/php-5.2.3RC1/libtool --silent --preserve-dup-deps 
--mode=compile c99  -Iext/standard/ -I/opt/build/php-5.2.3RC1/ext/
standard/ -DPHP_ATOM_INC -I/opt/build/php-5.2.3RC1/include -I/opt/
build/php-5.2.3RC1/main -I/opt/build/php-5.2.3RC1 -I/usr/nekoware/
include/libxml2 -I/usr/nekoware/include -I/opt/build/php-5.2.3RC1/ext/
date/lib -I/usr/nekoware/include/freetype2 -I/opt/build/php-5.2.3RC1/
ext/mbstring/oniguruma -I/opt/build/php-5.2.3RC1/ext/mbstring/libmbfl 
-I/opt/build/php-5.2.3RC1/ext/mbstring/libmbfl/mbfl -I/usr/nekoware/
mysql5/include/mysql -I/opt/build/php-5.2.3RC1/TSRM -I/opt/build/
php-5.2.3RC1/Zend  -D_XPG_IV -L/usr/nekoware/lib -L/usr/lib32  -I/usr/
include -mips4 -O3 -G0 -I/usr/nekoware/include -I/usr/include -Wl,-
rpath -Wl,/usr/nekoware/lib:/usr/nekoware/mysql5/lib/mysql -
OPT:Olimit=0:roundoff=3 -TARG:platform=IP35:proc=r14000   -c /opt/
build/php-5.2.3RC1/ext/standard/md5.c -o ext/standard/md5.lo 
cc-3604 c99: WARNING File = /opt/build/php-5.2.3RC1/Zend/zend_alloc.h, 
Line = 87
  missing return statement at end of non-void function "__zend_malloc"

  }
  ^

cc-3604 c99: WARNING File = /opt/build/php-5.2.3RC1/Zend/zend_alloc.h, 
Line = 104
  missing return statement at end of non-void function 
"__zend_realloc"

  }
  ^

cc-3970 c99: WARNING File = /opt/build/php-5.2.3RC1/Zend/
zend_execute.h, Line = 149
  conversion from pointer to same-sized integral type (potential 
portability
          problem)

        int delete_count = (int)(zend_uintptr_t) *p;
                                ^

cc-3970 c99: WARNING File = /opt/build/php-5.2.3RC1/Zend/
zend_execute.h, Line = 163
  conversion from pointer to same-sized integral type (potential 
portability
          problem)

        int arg_count = (int)(zend_uintptr_t) *p;
                             ^

cc-1117 c99: ERROR File = /opt/build/php-5.2.3RC1/ext/standard/md5.c, 
Line = 31
  An expression appears after a "return" in a "void" function.

        return make_digest_ex(md5str, digest, strlen(digest));
               ^

cc-1164 c99: WARNING File = /opt/build/php-5.2.3RC1/ext/standard/
md5.c, Line = 31
  Argument of type "unsigned char *" is incompatible with parameter of 
type
          "const char *".

        return make_digest_ex(md5str, digest, strlen(digest));
                                                     ^

cc-1164 c99: WARNING File = /opt/build/php-5.2.3RC1/ext/standard/
md5.c, Line = 63
  Argument of type "char *" is incompatible with parameter of type
          "const unsigned char *".

        PHP_MD5Update(&context, arg, arg_len);
                                ^

cc-1140 c99: WARNING File = /opt/build/php-5.2.3RC1/ext/standard/
md5.c, Line = 66
  A value of type "unsigned char *" cannot be used to initialize an 
entity of
          type "char *".

                RETURN_STRINGL(digest, 16, 1);
                ^

cc-1164 c99: WARNING File = /opt/build/php-5.2.3RC1/ext/standard/
md5.c, Line = 100
  Argument of type "unsigned char *" is incompatible with parameter of 
type
          "char *".

        while ((n = php_stream_read(stream, buf, sizeof(buf))) > 0) {
                    ^

cc-1140 c99: WARNING File = /opt/build/php-5.2.3RC1/ext/standard/
md5.c, Line = 113
  A value of type "unsigned char *" cannot be used to initialize an 
entity of
          type "char *".

                RETURN_STRINGL(digest, 16, 1);
                ^

1 error detected in the compilation of "/opt/build/php-5.2.3RC1/ext/
standard/md5.c".
gmake: *** [ext/standard/md5.lo] Error 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-05-27 14:50 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 10:00:02 2026 UTC