- Fixed bug #41511 (Compile failure under IRIX 6.5.30 building md5.c)